gitops/apps/forensic-sandbox/manifests/sandbox-app.yaml
# 1. 앰비언트 메시 라벨이 적용된 네임스페이스 (★ 누락됐던 핵심 부분 복구!)
apiVersion: v1
kind: Namespace
metadata:
  name: forensic-sandbox
  labels:
    # 파드 트래픽을 노드의 ztunnel이 가로채도록 설정
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: sandbox-waypoint
    # 깃옵스 기반 온-디멘드 샌드박스 완전 구현을 위해 샌드박스 생성 및 istio 보안 규칙 순서 동기화 wave 추가
  annotations:
    argocd.argoproj.io/sync-wave: "-1"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forensic-sandbox-app
  namespace: forensic-sandbox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 0
  selector:
    matchLabels:
      app: forensic-sandbox-app
  template:
    metadata:
      labels:
        app: forensic-sandbox-app
    spec:
      serviceAccountName: sandbox-app-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
      - name: consumer-app
        image: ghcr.io/bonge0115/worker-consumer:__SHA__ # 이미지 수정
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
