gitops/apps/forensic-sandbox/manifests/aws-rds-host.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-rds-host
  namespace: forensic-sandbox
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ExternalName
  externalName: rds.internal.aiops
